# 2-uzduotis

./: 1.1 darbas.cpp  1.1 darbas.sln  1.1 darbas.vcxproj  1.2 versija.sln  2.0 versija.sln  CMakeLists.txt  Funkcijos.h  Pagrindinis.cpp  README.md  Studentas.cpp  Studentas.h
1.2 versija/: 1.2 versija.cpp  1.2 versija.vcxproj  Funkcijos.h  Pagrindinis.cpp  Studentas.cpp  Studentas.h
2.0 darbas/: Funkcijos.h
2.0 versija/: 2.0 versija.cpp  2.0 versija.vcxproj  Pagrindinis.cpp  Studentas.cpp  Studentas.h
html/: index.html
