cmake_minimum_required(VERSION 3.20)

project("2.0 versija")

add_executable( "${PROJECT_NAME}" "C:/Users/Rimas/source/repos/2.0 versija/2.0 versija/2.0 versija.cpp" "C:/Users/Rimas/source/repos/2.0 versija/2.0 versija/Pagrindinis.cpp" "C:/Users/Rimas/source/repos/2.0 versija/2.0 versija/Studentas.cpp") 